--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,34 @@ services:
       - POSTGRES_DB=itq
     ports:
       - '5432:5432'
+    networks:
+      - itq-network
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  app:
+    build: .
+    restart: always
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/itq
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=postgres
+    ports:
+      - '8080:8080'
+    networks:
+      - itq-network
+
+networks:
+  itq-network:
+    driver: bridge
 
 volumes:
   postgres_data:
